Closed
Bug 1343590
Opened 9 years ago
Closed 9 years ago
Improve CallArgs gray marking assertions to also check this and callee
Categories
(Core :: JavaScript: GC, defect)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox54 | --- | fixed |
People
(Reporter: jonco, Assigned: jonco)
References
Details
Attachments
(1 file)
|
796 bytes,
patch
|
sfink
:
review+
|
Details | Diff | Splinter Review |
This might possibly show up the problem in bug 1336630 earlier since the gray object is coming from a property of the callee passed to ResolvePromiseFunction.
Attachment #8842498 -
Flags: review?(sphink)
Comment 1•9 years ago
|
||
Comment on attachment 8842498 [details] [diff] [review]
improve-callargs-asserts
Review of attachment 8842498 [details] [diff] [review]:
-----------------------------------------------------------------
Oh yeah, good place to check.
Attachment #8842498 -
Flags: review?(sphink) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/772de2146034
Improve CallArgs gray marking assertions r=sfink
Comment 3•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•