Bug 1343590 - Improve CallArgs gray marking assertions r=sfink